--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="game"><a href="memorygame/index.html"> <img src="memorygame/images/mglogo.png" alt=""> <br> Memory Game</a></div>
             <div class="game"><a href="snake/index.html"> <img src="snake/cslogo.png" alt=""> <br> Classic Snake</a></div>
             <div class="game"><a href="tictactoe/index.html"> <img src="tictactoe/tttlogo.png" alt=""> <br> Tic Tac Toe</a></div>
-            <div class="game"><a href="FlappyBird/index.html"> <img src="FlappyBird/fblogo.png" alt=""> <br> Flappy Buddy</a></div>
+            <div class="game"><a href="FlappyBird/index.html"> <img src="flappyBird/fblogo.png" alt=""> <br> Flappy Buddy</a></div>
         </div>
 
         <div class="footer">
