--- a/navbar.html
+++ b/navbar.html
@@ -98,12 +98,12 @@
 	<button class="navbtn" onclick="toggleNavBtn()">Menu</button>
 	<nav>
     	<div class="nvgBtn" id="nvgBtn">
-			<div class="nvgame"> <a href="N-games/index.html"> <img class="one" src="../my-n-logo.svg" alt=""> <br> Home</a></div>
-        	<div class="nvgame"> <a href="N-games/infinitrunner/index.html"> <img class="one" src="../infinitrunner/imgs/inlogo.png" alt=""> <br> Infinite Runner</a></div>
-        	<div class="nvgame"><a href="N-games/memorygame/index.html"> <img src="../memorygame/images/mglogo.png" alt=""> <br> Memory Game</a></div>
-        	<div class="nvgame"><a href="N-games/snake/index.html"> <img src="../snake/cslogo.png" alt=""> <br> Classic Snake</a></div>
-        	<div class="nvgame"><a href="N-games/tictactoe/index.html"> <img src="../tictactoe/tttlogo.png" alt=""> <br> Tic Tac Toe</a></div>
-			<div class="nvgame"><a href="N-games/flappyBird/index.html"> <img src="../flappyBird/fblogo.png" alt=""> <br> Tic Tac Toe</a></div>
+			<div class="nvgame"> <a href="../index.html"> <img class="one" src="../my-n-logo.svg" alt=""> <br> Home</a></div>
+        	<div class="nvgame"> <a href="../infinitrunner/index.html"> <img class="one" src="../infinitrunner/imgs/inlogo.png" alt=""> <br> Infinite Runner</a></div>
+        	<div class="nvgame"><a href="../memorygame/index.html"> <img src="../memorygame/images/mglogo.png" alt=""> <br> Memory Game</a></div>
+        	<div class="nvgame"><a href="../snake/index.html"> <img src="../snake/cslogo.png" alt=""> <br> Classic Snake</a></div>
+        	<div class="nvgame"><a href="../tictactoe/index.html"> <img src="../tictactoe/tttlogo.png" alt=""> <br> Tic Tac Toe</a></div>
+			<div class="nvgame"><a href="../flappyBird/index.html"> <img src="../flappyBird/fblogo.png" alt=""> <br> Tic Tac Toe</a></div>
 
 		</div>
   	</nav>
